# gato-core

./: Cargo.toml  README.md
src/kernel/: http_core.rs  logger.rs  mod.rs  request.rs  response.rs  router.rs  singleton.rs
src/kernel/application/: application.rs  mod.rs  service_provider.rs
