[package]
name = "gato-core"
version = "0.2.1"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"
description = "Core of Gato Web Framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
